# ANT-MOC

./: .gitignore  cmfd学习.md
ant-moc-develop/: .codeclimate.yml  .gitattributes  .gitignore  .gitlab-ci.yml  .vimrc  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  antmocConfig.cmake.in
ant-moc-develop/.gitlab/ci/: base.yml  code-quality.yml  coverage.yml  generate-tests.py  strip-binaries.sh  triggers.yml
ant-moc-develop/.gitlab/issue_templates/: Bug.md  Feature.md
ant-moc-develop/20240110-165303-Non-uniform/: reaction_rates.vtu  reaction_rates_flattened.csv
ant-moc-develop/20240619-121757/: reaction_rates.vtu
ant-moc-develop/Log-Hex-Modify/: cefr-cell-region-surface  cefr-segmentize-cmfd-surface  cefr-tallyHexCurrent
ant-moc-develop/Log-Hex-Modify/Result-compare/: output-Hex-Shape  output-c5g7-oldflux  output-c5g7-segment-surface  output-cefr-oldsource  output-cefr-segment-surface-0.1  output-cefr-sor-0.7  output-v0.1-sor-0.7
ant-moc-develop/Log-Hex-Modify/Result-compare/cefr-SOR-0.7/: geometry.xml  primitives.xml
ant-moc-develop/apps/: antmoc.cpp
ant-moc-develop/cases/CFR-BOC/: CFR-BOC.xml  primitives.xml
ant-moc-develop/cases/beavrs/: geometry.xml  settings.toml  settings.xml
ant-moc-develop/cases/beavrs/four-assemblies/: geometry.xml  settings.toml  settings.xml
ant-moc-develop/cases/beavrs/single-assembly/: geometry.xml  settings.toml  settings.xml
ant-moc-develop/cases/c5g7/: c5g7-3d-cmfd.cpp  c5g7-3d.cpp  c5g7-printRx.h  c5g7-rodded-A-geo.xml  c5g7-rodded-B-2x2.cpp  c5g7-rodded-B-geo.xml  c5g7-unrodded-geo.xml  c5g7-unrodded.cpp  c5g7-ws.cpp  primitives.xml  settings.toml  settings.xml
ant-moc-develop/cases/c5g7/pin-cell/: geometry.xml  settings.xml
ant-moc-develop/cases/c5g7/simple-lattice/: geometry.xml  settings.toml  settings.xml
ant-moc-develop/cases/c5g7/single-assembly/: geometry.xml  settings.toml  settings.xml
ant-moc-develop/cases/cefr/: CEFR-origin.xml  geometry.xml  primitives.xml  settings.toml  settings.xml
ant-moc-develop/cases/fixed-source/: pin-cell-fixed-3d.cpp
ant-moc-develop/cases/homogeneous/: homogeneous.cpp
ant-moc-develop/cases/load-geometry/: load-geometry.cpp  load-single-assembly.cpp
ant-moc-develop/cases/pin-cell/: pin-cell-3d.cpp
ant-moc-develop/cases/simple-lattice/: simple-lattice-3d.cpp
ant-moc-develop/cases/single-assembly/: quarter-c5g7-assembly.cpp  single-c5g7-assembly.cpp
ant-moc-develop/cases/takeda/: primitives.xml  settings.toml  settings.xml  takeda-rodded-geo.xml  takeda-unrodded-geo.xml  takeda-unrodded.cpp
ant-moc-develop/cmake/: ANTMOCMacros.cmake  CodeCoverage.cmake  SetupCompilers.cmake  SetupDependencies.cmake  SetupHIP.cmake  SetupUserOptions.cmake
ant-moc-develop/dependencies/cxxopts/: CMakeLists.txt
ant-moc-develop/host-configs/xiandao-1/: hip.cmake
ant-moc-develop/include/antmoc/: BoolParser.h  CPULSSolver.h  CPUSolver.h  Cell.h  Cmfd.h  ConfigInput.h  ConfigInputCLI.h  ConfigInputFile.h  ExpEvaluator.h  FSRDataHandler.h  FSRDataHandlerHDF5.h  FSRDataTypes.h  Factory.h  GeoInput.h  GeoInputXml.h  Geometry.h  HDF5Handler.h  Lattice.h  LocalCoords.h  MOCKernel.h  Material.h  MaterialHandler.h  MaterialHandlerHDF5.h  Matrix.h  Mesh.h  Option.h  ParallelHashMap.h  ParentNodeStack.h  Point.h  Progress.h  PyVector.h  Quadrature.h  Solver.h  Surface.h  Timer.h  Track.h  Track3D.h  TrackDataHandlerHDF5.h  TrackGenerator.h  TrackGenerator3D.h  (+24 more)
ant-moc-develop/scripts/: build-antmoc.sh  extract_records.py  h5dump-wrapper.sh  logs2json.py
ant-moc-develop/src/fileio/: BoolParser.cpp  FSRDataHandler.cpp  FSRDataHandlerHDF5.cpp  GeoInput.cpp  GeoInputXMLUtils.cpp  GeoInputXml.cpp  HDF5Handler.cpp  MaterialHandler.cpp  MaterialHandlerHDF5.cpp  Mesh.cpp  VecParser.cpp  file_utils.cpp  tally_utils.cpp  xml_utils.cpp
ant-moc-develop/src/geometry/: Cell.cpp  FSRDataTypes.cpp  Geometry.cpp  Lattice.cpp  LocalCoords.cpp  Point.cpp  Surface.cpp  Universe.cpp
ant-moc-develop/src/logger/: Progress.cpp  log.cpp
ant-moc-develop/src/material/: Material.cpp
ant-moc-develop/src/options/: ConfigInput.cpp  ConfigInputCLI.cpp  ConfigInputFile.cpp  Option.cpp  ParentNodeStack.cpp  toml_utils.cpp
ant-moc-develop/src/solver/: CPULSSolver.cpp  CPUSolver.cpp  Cmfd.cpp  ExpEvaluator.cpp  MOCKernel.cpp  Matrix.cpp  Solver.cpp  TrackTraversingAlgorithms.cpp  TraverseSegments.cpp  Vector.cpp  linalg.cpp  openmp_utils.cpp
ant-moc-develop/src/timer/: Timer.cpp
ant-moc-develop/src/track/: Quadrature.cpp  Track.cpp  Track3D.cpp  TrackGenerator.cpp  TrackGenerator3D.cpp  TrackLoadBalance.cpp
ant-moc-develop/src/utils/: ParallelHashMap.cpp  math_utils.cpp  mpi_utils.cpp  pairwise_sum.cpp  string_utils.cpp
ant-moc-develop/tests/: CMakeLists.txt  run_tests.cpp
ant-moc-develop/tests/generators/: gen-3DinitializeTracks.sh
ant-moc-develop/tests/regression/: CMakeLists.txt
ant-moc-develop/tests/unittests/: CMakeLists.txt  initializeTracks_common.inc  initializeTracks_input.inc  test_BoolParser.cpp  test_Cell_containsPoints.cpp  test_Cell_distance.cpp  test_ConfigInputCLI_parser.cpp  test_FileUtils.cpp  test_GeoInputXml_buildGlobal.cpp  test_GeoInputXml_buildHexLattice.cpp  test_GeoInputXml_buildHexLatticePrism.cpp  test_GeoInputXml_buildLattice2D.cpp  test_GeoInputXml_buildLattice3D.cpp  test_GeoInputXml_buildPrimitives.cpp  test_GeoInputXml_buildQuadraticSurfaces.cpp  test_GeoInputXml_helpers.cpp  test_GeoInputXml_layoutUtils.cpp  test_HexLatticePrism.cpp  test_Lattice_cellCenters.cpp  test_Lattice_cellVertices.cpp  test_Lattice_variableWidths.cpp  test_MaterialIdConversion.cpp  test_MathUtils.cpp  test_Point_arithmetic.cpp  test_PyVector.cpp  test_StringUtils.cpp  test_TallyUtils.cpp  test_VecParser.cpp  test_XMLUtils.cpp  test_ZCylinder.cpp  test_hip_DeviceFSRDataTypes.cpp  test_hip_DeviceMaterial.cpp  test_hip_DevicePoint.cpp  test_hip_DeviceQuadrature.cpp  test_hip_DeviceRayTracer.cpp  test_hip_DeviceTracks.cpp  test_hip_TrackIndexTypes.cpp  test_initializePeriodicTracks.cpp  test_initializeReflectiveTracks.cpp
ant-moc-develop/tools/: data2vtk.py  vtu2xls.py
(+113 files in other folders)
